--- a/assets/estilos/SaSS/_vars.scss
+++ b/assets/estilos/SaSS/_vars.scss
@@ -21,7 +21,7 @@ $wth_res: (
     "mob_02": 375px,
     "mob_03": 452px,
     "mob_04": 481px,
-    "mob_05": 568px,
+    "mob_05": 570px,
     "mob_06": 660px,
     "tbl_01": 768px,
     "pst_tbl": 922px,
@@ -71,6 +71,7 @@ $color: (
     "gris_15": #f3f3f5,
     "gris_16": #dedede,
     "gris_17": #f1f1f1,
+    "gris_18": #232323,
     "blanco": #fff,
     "rojo_01": #ff0000,
     "rojo_02": #cb0000,
@@ -100,6 +101,7 @@ $color: (
 // $fam_04: 'Raleway', sans-serif;
 $fam_01: 'Bebas Neue', sans-serif;
 $fam_02: 'Antonio', sans-serif;
+$fam_03: 'Urbanist', sans-serif;
 
 /*
 $fam_01: 'Bebas Neue', sans-serif;
