--- a/assets/estilos/SaSS/styles.css
+++ b/assets/estilos/SaSS/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Bebas+Neue&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /*
 $fam_01: 'Bebas Neue', sans-serif;
 $fam_02: 'Pathway Gothic One', sans-serif;
@@ -480,6 +480,10 @@ h1 {
 #contenedor #cabecera .cabecera__dkp .cabecera__dkp--menu ul li:last-child {
   padding: 0 0 0 1svh;
 }
+#contenedor #contenido #contenido__carrousel {
+  overflow-x: hidden;
+  height: 82svh;
+}
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .slider {
   position: relative;
   background: #333;
@@ -536,7 +540,7 @@ h1 {
   opacity: 1;
 }
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .navigation {
-  height: 85svh;
+  height: 83svh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -558,6 +562,7 @@ h1 {
   fill: #000;
   stroke: #000;
   stroke-width: 3px;
+  display: block;
 }
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .prev-btn {
   border-top-right-radius: 3px;
@@ -574,18 +579,187 @@ h1 {
 }
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .navigation-visibility .slide-icon {
   z-index: 997;
-  background: rgba(255, 255, 255, 0.5);
+  background: #aaa;
   width: 20px;
-  height: 10px;
+  height: 20px;
   transform: translateY(-50px);
   margin: 0 6px;
-  border-radius: 2px;
+  border-radius: 50%;
   box-shadow: 0 5px 25px rgba(1, 1, 1, 0.2);
+  border: 1px solid #000;
 }
 #contenedor #contenido #contenido__carrousel .contenido__carrousel--slider .navigation-visibility .slide-icon.active {
-  background: #960101;
+  background: #cb0000;
+  border: 1px solid #000;
+}
+#contenedor #contenido .contenido__info {
+  padding: 5svh 0 0;
+  margin: 1px 0 0;
+  overflow-x: hidden;
+}
+#contenedor #contenido .contenido__info .contenido__info--nosotros {
+  padding: 0 5%;
+  overflow-x: hidden;
+  width: 100svw;
+  margin: 0 0 7svh;
+}
+#contenedor #contenido .contenido__info .contenido__info--nosotros h3 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 14svw;
+  font-weight: 600;
+  color: #000;
+  line-height: 1;
+  text-transform: uppercase;
+  left: -100%;
+  position: relative;
+  width: auto;
+  display: inline-block;
+}
+#contenedor #contenido .contenido__info .contenido__info--nosotros p {
+  font-family: "Urbanist", sans-serif;
+  font-size: 5.5svw;
+  color: #000;
+  margin: 1.5svh 0 0;
+  position: relative;
+  right: -100%;
+  width: auto;
+  display: inline-block;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios {
+  background: #232323;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_margensep {
+  height: 14px;
+  width: 100%;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_margensep div {
+  position: relative;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_margensep div::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  left: 0%;
+  top: 100%;
+  z-index: 10;
+  display: block;
+  height: 30px;
+  background-size: 30px 100%;
+  background-image: linear-gradient(135deg, #fff 25%, transparent 25%), linear-gradient(225deg, #fff 25%, transparent 25%);
+  background-position: 0 0;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_margenbott {
+  height: 14px;
+  width: 100%;
+  background: #fff;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_margenbott div {
+  position: relative;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_margenbott div::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  left: 0%;
+  top: 100%;
+  z-index: 10;
+  display: block;
+  height: 30px;
+  background-size: 30px 100%;
+  background-image: linear-gradient(135deg, #232323 25%, transparent 25%), linear-gradient(225deg, #232323 25%, transparent 25%);
+  background-position: 0 0;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont {
+  padding: 5svh 5% 0;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont h3 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 14svw;
+  font-weight: 600;
+  color: #ededed;
+  line-height: 1;
+  text-transform: uppercase;
+  right: -100%;
+  position: relative;
+  width: auto;
+  display: block;
+  margin: 0 0 5svh;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont .info__servicios--cont_cont {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  gap: 0px;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont .info__servicios--cont_cont .info__servicios--cont_box {
+  display: inline-block;
+  min-width: 90svw;
+  margin: 0 0 5svh;
+  opacity: 0;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont .info__servicios--cont_cont .info__servicios--cont_box .servicios__cont--box_img {
+  top: 0;
+  left: 0;
+  width: 70px;
+  float: left;
+  margin: 0 1.5svh 0 0;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont .info__servicios--cont_cont .info__servicios--cont_box .servicios__cont--box_img img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont .info__servicios--cont_cont .info__servicios--cont_box h4 {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 9svw;
+  font-weight: 600;
+  color: #ccc;
+  line-height: 1;
+  text-transform: uppercase;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont .info__servicios--cont_cont .info__servicios--cont_box p {
+  font-family: "Urbanist", sans-serif;
+  font-size: 5.5svw;
+  color: #fff;
+  line-height: 1.8;
+}
+#contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont .info__servicios--cont_cont .info__servicios--cont_box.animacion {
+  -webkit-animation: animacionServicios 1.5s forwards;
+          animation: animacionServicios 1.5s forwards;
+}
+@-webkit-keyframes animacionServicios {
+  0% {
+    opacity: 0;
+    padding-top: 50px;
+  }
+  100% {
+    opacity: 1;
+    padding-top: 0;
+  }
+}
+@keyframes animacionServicios {
+  0% {
+    opacity: 0;
+    padding-top: 50px;
+  }
+  100% {
+    opacity: 1;
+    padding-top: 0;
+  }
 }
 
+@media only screen and (min-width: 481px) {
+  #contenedor #contenido .contenido__info .contenido__info--nosotros h3 {
+    font-size: 67.34px;
+  }
+  #contenedor #contenido .contenido__info .contenido__info--nosotros p {
+    font-size: 26.45px;
+  }
+  #contenedor #contenido .contenido__info .contenido__info--servicios .contenido__info--servicios_cont h3 {
+    font-size: 67.34px;
+  }
+}
 @media only screen and (min-width: 660px) {
   #contenedor #cabecera .cabecera__movil .cabecera__movil--marca .cabecera__movil--marca_img {
     width: 109.11px;
