--- a/assets/estilos/SaSS/_estruct.scss
+++ b/assets/estilos/SaSS/_estruct.scss
@@ -67,13 +67,16 @@
                     .h1__01 {
                         font-family: $fam_02;
                         font-size: 12svw;
+                        // font-size: 9svw;
                         font-weight: 100;
                     }
                       
                     .h1__02 {
                         font-family: $fam_01;
                         font-size: 14.1svw;
+                        // font-size: 11.1svw;
                         font-weight: 900;
+                        letter-spacing: -1px;
                     }
 
                 }
@@ -687,7 +690,16 @@
     }
 
     #pie {
+        @include caja__flexible--edit ($flx_bx_ff: row wrap, $flx_bx_alit: flex-start, $flx_bx_juco: space-evenly, $flx_bx_gap: 0px);
         background-color: map-get($color, "gris_01");
+        padding: 5svh 5% 3svh;
+
+        .pie__box {
+            display: inline-block;
+            min-width: 90svw;
+            
+        }
+
     }
 
 }
